docs: correct factual mappings and streamline taxonomies